feat: add replacement props values

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <div id="app">
       <phone-widget
-        :callback="'107660e386e1ff-0e2f4b1d3a4ed1-bbaf50e731a768'"
+        :callback="'__CALLBACK__'"
         :phone-widget-buttons-params="{
           image:
-            'https://media.licdn.com/dms/image/D4D0BAQF45HGdgBzUJA/company-logo_200_200/0/1666014403929/hiperpbx_logo?e=2147483647&v=beta&t=O6BjUooYVB7axBnEEH_goPk2XQHT58zoQCKWN0nikD0',
-          textInWidget: '',
+            '__LOGO__',
+          textInWidget: '__TEXT_IN_IMAGE__',
         }"
       ></phone-widget> 
   </div>
