feat: add replacement value in head for add styles tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hipeme Softphone Widget</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <link rel="stylesheet" href="phone-widget.css">
+    __STYLES__
   </head>
   <body>
     <div id="app">
@@ -14,7 +14,7 @@
         :phone-widget-buttons-params="{
           image:
             '__LOGO__',
-          textInWidget: '__TEXT_IN_IMAGE__',
+          textInWidget: '__TEXT_IN_WIDGET__',
         }"
       ></phone-widget> 
   </div>
