--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }"
       ></phone-widget> 
   </div>
-    <script src="https://cdn.jsdelivr.net/gh/danik363/hiperme-softphone-widget-budle@latest/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/danik363/hiperme-softphone-widget-budle@latest/main.js?cache-clear"></script>
     <script type="module">
       const { PhoneWidget } = MyVueComponents;
 
