feat: changes phone widget props

--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
   <body>
     <div id="app">
       <phone-widget
-        :callback="'__CALLBACK__'"
-        :phone-widget-buttons-params="{
-          image:
-            '__LOGO__',
-          textInWidget: '__TEXT_IN_WIDGET__',
-        }"
+        :connection-data="{__CONNECTION_DATA__}"
+        :phone-widget-params="{__PHONE_WIDGET_PARAMS__}"
       ></phone-widget> 
   </div>
     <script src="https://cdn.jsdelivr.net/gh/danik363/hiperme-softphone-widget-budle@latest/main.js?cache-clear"></script>
