test: change the connectionDataJson and phoneWidgetParamsJson templates

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <script type="module">
       const { PhoneWidget } = MyVueComponents;
 
-      const connectionDataJson = `${__CONNECTION_DATA__}`;
-      const phoneWidgetParamsJson = `${__PHONE_WIDGET_PARAMS__}`;
+      const connectionDataJson = `__CONNECTION_DATA__`;
+      const phoneWidgetParamsJson = `__PHONE_WIDGET_PARAMS__`;
 
       const app = Vue.createApp({
         data() {
