feat: change the js cdn to template

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ __STYLES__
   ></phone-widget>
 </div>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/danik363/hiperme-softphone-widget-budle@latest/main.js?cache-clear"></script>
+__SCRIPT__
 <script type="module">
     const { PhoneWidget } = MyVueComponents;
     const app = Vue.createApp({});
